# sample_projects

./: basic_questions.md
generic/: CMakeLists.txt  builder.sh  generate.sh
generic/docs/: brain_components.md
generic/prompts/: design_prompt.md
generic/src/: hello.cpp
job_queue/: CMakeLists.txt  tmp
job_queue/docs/: control_flow.md  invariants.md  testing.md
job_queue/prompts/: design_prompt.md
job_queue/src/: FakeClock.h  JobQueue.cpp  LeaseQueue.h
job_queue/test/: test_job_queue.cpp  test_lease_queue_concurrency.cpp
lsm_mini_engine/: CMakeLists.txt  codebase.md  design_output.md  design_prompt.md  intro.md
lsm_mini_engine/compaction/: compaction.h
lsm_mini_engine/db/: db.h
lsm_mini_engine/iter/: internal_key.h  iterator.h  merging_iter.h
lsm_mini_engine/memtable/: memtable.h
lsm_mini_engine/prompts/: code_prompt.md  test_prompt.md
lsm_mini_engine/src/compaction/: compaction.cpp  compaction.h
lsm_mini_engine/src/db/: db.cpp  db.h
lsm_mini_engine/src/iter/: iterator.h  merging_iter.cpp
lsm_mini_engine/src/memtable/: memtable.cpp  memtable.h
lsm_mini_engine/src/sstable/: block.cpp  block.h  bloom.cpp  builder.cpp  builder.h  format.h  reader.cpp  reader.h  varint.h
lsm_mini_engine/src/version/: manifest.cpp  manifest.h
lsm_mini_engine/src/wal/: wal.cpp  wal.h
lsm_mini_engine/sstable/: bloom.h
lsm_mini_engine/test/: lsm_engine_test.cpp
lsm_mini_engine/tools/: extract_gpt_blocks.py
lsm_mini_engine/version/: manifest.h
lsm_mini_engine/wal/: wal.h
vdb_merge/: design_output.md  design_prompt.md
wal/: tmp
wal/docs/: foundational_design.md  wal-design-document.md
wal/prompts/: comm_prompt.md  core_interfaces_prompt.md  design_prompt.md
wal/proto/: dist_index.proto
wal/test/: test1.cpp
